5.0/develop/changelog.md
## 5.5.0  更新时间:2024-11-07
### 全局:
1. 修复各种已知问题

### 实时翻译:
1. 修复各种已知问题

### 漫画翻译:
1. 接入新的文字渲染器v2版本, 优化渲染排版
2. 支持全局修改字体大小
3. 支持自定义文本方向, 竖向和横向切换
4. 支持字间距、行间距调整
5. 支持水平、垂直文本位置调整

## 5.4.0 更新时间:2024-10-07
### 全局
1. 修复各种已知问题

### 实时翻译
1. 新增了改变翻译框手动/自动模式的快捷键
2. 去掉本地ocr和tts的安装&卸载按钮, 改为自动检测和触发

### 漫画翻译
1. 优化界面字体大小问题
2. 右下角新增图片自适应大小按钮
3. 大图展示区域也支持右键唤出快捷菜单

## 5.4.0 更新时间:2024-09-30
### 全局
1. 支持手机号注册、登录、修改密码
2. 优化修改翻译源颜色的图标
3. 修复各种已知问题...

### 实时翻译
1. 截取范围框时所选区域会高亮
2. 本地OCR采用动态端口, 避免端口冲突而运行失败

### 漫画翻译
1. 优化漫画UI尺寸比例异常问题
2. 新增超分辨率功能, 可以对模糊的图修复清晰再翻译
3. 新增支持批量拖拽导入图片文件和多文件夹
4. 新增支持从含图片目录的.txt文档导入图片
5. 新增翻译完成自动导出译图功能
6. 新增支持自定义导出译图的图片格式和压缩比例
7. 图片列表框右键菜单栏支持快速导出单张译图
8. 原文语种新增繁体中文, 可将繁体转简体

## 5.3.0 更新时间:2024-08-11
### 新增
1. 新增图片翻译加速组件, 大大提高了图片翻译的整体速度, 可在高级设置中开启
2. 图片翻译现在不再保存png缓存, 全部改为jpeg, 避免图片占用磁盘空间过大问题
3. 图片翻译设置新增逐行翻译后处理开关, 具体功能可于高级设置中查阅
4. 图片翻译新增, 文字识别置信度阈值, 用于规避一些错误将物体识别为文字的情况
5. 移除了图片翻译导入时, 图片超张数不显示略缩图的强制提醒
6. 图片列表框新增右键打开图片所在位置的菜单项
7. 实时翻译的设置里, 字体选择和字体大小, 现在支持预览字体效果了

### 优化
1. 优化了图片翻译内存占用过大问题, 现在会自动释放内存
2. 图片翻译修复了, 当图片过多时, 选择`跳过已翻译的`会卡死问题
3. 修复了很多已知的问题

## 5.2.9.1 更新时间:2024-07-24
### 优化
1. 修复chatgpt使用代理地址连接失败问题

## 5.2.9版本 更新时间:2024-07-23
### 优化
1. 修复win7用户证书校验失败而无法使用
2. 修复在线OCR的节点选择无效
3. 修复本地OCR和本地朗读下载安装问题, 优化其下载方式

## 5.2.6版本 更新时间:2024-07-19
### 新增
1. 新增朗读原文/译文的快捷键
2. 图片翻译支持jpe格式
3. 图片翻译选择翻译源新增跳转翻译设定   

### 优化
1. 修复了很多已知的问题
2. 修复图片翻译webp格式的图略缩图不显示
3. 优化图片翻译手动识别识别不到文本的问题

## 5.2.5版本 更新时间:2024-07-05
### 优化
1. 修复自定义模型里tgw调用失败问题

## 5.2.4版本 更新时间:2024-07-04
### 新增
1. 接入llama(sakura)本地大模型AI翻译
2. 漫画翻译导入原图可自定义略缩图显示的张数阈值
3. 翻译框文字支持居中显示, 在[显示设定-翻译框样式]里开启
4. 任务栏系统托盘里的团子图标, 右键现在可退出程序

### 优化
1. 去除各种设置页的背景, 修改UI字体为微软雅黑
2. 修复在线OCR调用时可能出现的"请求参数错误"的问题
3. 漫画处理超时时长调整为180s, 避免超时问题导致处理失败
4. 修复漫画新导入字体会不生效的问题
5. 修复漫画本地文字渲染可能会失败从而调用了在线渲染的问题
6. 修复GPT的上下文联系功能失效问题
7. 更新了GPT自定义模型的列表
8. 合并了本地OCR和朗读的安装&卸载按钮
9. 百度OCR高精度模式支持竖向翻译

## 5.2.3版本 更新时间:2024-06-05
### 优化
1. 修复偶发的调用星河云服务会出现, 请求参数错误
2. 实时翻译的字号最大限制由30调整为99

## 5.2.2版本 更新时间:2024-06-01
### 新增
1. 开启贴图翻译时, 新增配置可让贴图层变为鼠标穿透效果, 不会妨碍操作下层的应用, 配置位于[设置-功能设定-其他]一栏里
2. 新增全屏置顶开关, 配置位于[设置-功能设定-其他]一栏里

### 优化
1. 彻底优化各种闪退、崩溃、卡死等问题!!!!!
2. 优化自动翻译时, 底下白色字的状态栏, 会过分闪烁问题
3. 修复漫画翻译在特定情况下, 会出现只翻译第一张的问题
4. 修复部分开关文字不准确问题
5. 修复设置页部分数字选择器偶发乱码问题

## 5.2.0版本 更新时间:2024-05-22
### 新增
1. 加上了翻译框的锁功能, 之前的锁功能是失效的

### 优化
1. 换了编译方式和目录结构, 提高了软件的启动速度和运行的稳定性
2. 优化了图片翻译的导入方式, 大于100张图片将不再显示略缩图, 导入大量图片时可以做到秒导入
3. 图片翻译对于大图的限制现在提高到了20m, 原来是5m
4. 优化了图片翻译高占用内存问题, 降低了一些内存的占用
5. 图片翻译的图片在切换时, 放大后的进度条比例和位置会不会随着切换刷新图片而改变
6. 当翻译框和范围选择框发生重叠时, 恢复其原来有的提醒
7. 修复了已知会导致卡顿闪退的问题, 优化了一些使用体验

## 5.1.7-Beta版本 更新时间:2024-04-28
### 新增
1. 新增贴图翻译功能, 可将翻译结果直接贴于原文区域。 可在设置-功能设定-其他一栏打开 (请注意如果在自动模式下使用, 会出现贴图层闪烁问题, 将自动翻译的时间间隔调大可缓解, 或者不在自动模式下使用)

### 优化
1. 翻译框和范围框发生碰撞重叠不再强制提示, 而是在触发截图时短暂隐藏翻译框以不影响截图
2. 修改了翻译源的一些文本描述, 使其更为准确
3. tgw翻译源的开关, 打开时会校验是否能使用, 避免在未配置时可以被打开
4. 优化一些已知问题, 例如词库界面偶尔会卡死崩溃

## 5.1.6-Beta版本 更新时间:2024-04-12
### 新增
1. 新增固定翻译功能, 在屏蔽词替换词界面配置, 可按照自定义的意思翻译
2. 添加广播通知功能, 后续有什么问题可以广播通知大家      

### 优化
1. 修复图片翻译时, 一些可能导致程序卡死崩溃的问题, 例如在重新贴字时操作滚轮缩放图片会卡死
2. 修复图片翻译, gpt延时功能失效问题
3. 优化自动压缩图片大小逻辑, 大于3m的图片将会被自动压缩以提高处理速度, 减小资源消耗
4. 修复漫画翻译切换图片时, 图片的缩放比例会被重置的问题
5. 修复漫画翻译切换 原图/译图/原图 列表框时, 当前选择的图片页数会跳回第一页的问题
6. 修改了设置页面翻译源的排序, 把翻译不怎么好的团子放下面了, 推荐火山和小牛放最上面

## 5.1.5-Beta版本 更新时间:2024-04-01
### 新增
1. chatgpt模型设置新增可选克劳德3

### 优化
1. 图片翻译, 修复gpt翻译时可能导致程序卡死的问题
2. 图片翻译, 修复英文字换行无空格粘黏在一起的问题
3. 图片翻译, 将文字识别、消除、翻译、渲染的超时时长均增加至60s
4. chatgpt的API地址输入栏新增地址后缀自动补全

## 5.1.4-Beta版本 更新时间:2024-03-26
### 优化
1. 修复导入图片可能会卡死的问题;
2. 图片最大缩放比例扩大至150%(原来100%);

## 5.1.3-Beta 更新时间:2024-03-25
### 优化
1. 修复chatgpt若不使用代理时的连接问题
2. 修复漫画导入高清图时会过度压缩原图的问题

## 5.1.0-Beta版本 更新时间:2024-01-31
### 优化：
1. 优化图片翻译内存占用过大问题
2. 顺便做下重构版本的更新测试~

## 4.5.8版本 更新时间:2023-09-15
### 新增
1. 全面优化翻译历史界面, 支持对翻译历史增、删、改、查润色和导出
2. 设置页面功能设定新增本地翻译历史调用配置
3. 翻译框文字的描边参数和颜色, 可以在设置的样式设定里修改了
4. 图片翻译新增, 自动记录前几次的导入目录, 方便快速导入
5. 图片翻译新增, 导出时可选清除缓存文件
6. 图片翻译新增, 支持批量删除和全部删除图片框的图片
7. 图片翻译新增, 一键翻译时可选只重新渲染和只翻译并重新渲染 

### 优化
1. 图片翻译时, 翻译和文字消除改为同时进行, 减少总体耗时
2. 优化图片翻译手动绘制时偶尔会识别失败的问题
3. 修复图片翻译可能出现闪退的问题
4. 修复一些已知的bug和糟糕的体验

## 4.5.7版本 更新时间:2023-08-15
### 新增
1. 翻译源新增私人有道、私人小牛、私人火山
2. 优化翻译历史的界面, 新增sqllite管理翻译数据, 翻译加入本地查询, 重复的译文不会反复调用翻译源, 而是直接用本地保存的已翻译的结果
3. chatgpt新增自定义催眠话术、联系上下文、翻译间隔延时功能
4. 图片翻译编辑图新增, 区域还原功能, 可手动还原消除错误的区域
5. 图片翻译高级设置新增过滤短字数句子功能

### 优化
1. 优化设置-翻译设定-私人翻译界面
2. 优化图片翻译界面

### 修复
1. 修复特定情况下出现的翻译框过大, 位置超屏幕等各种问题
2. 修复一些已知的bug

## 4.5.6版本 更新时间:2023-07-14
### 新增
1. 图片翻译, 高级设置新增文本气泡框合并间隔参数, 可解决不同的文本气泡框错误合并在一起的问题

### 优化
1. 翻译框在锁定状态时, 会应用鼠标穿透效果, 解决游玩游戏时出现误触翻译框问题
2. 优化了图片翻译-高级设置的UI布局, 优化了设置登录、设置页面的背景图

### 修复
1. 修复初始化启动时, 设置的字体大小和样式不会生效的问题
2. 图片翻译, 修复删除文本框可能出现报错的问题
3. 图片翻译, 修复编辑文本框处, 重新翻译时屏蔽词不会生效的问题
4. 图片翻译, 修复重新翻译后, 编辑/译图列表框的略缩图不会刷新的问题

## 4.5.5版本 更新时间:2023-07-05
### 新增
1. 图片翻译, 新增可隐藏图片列表框侧边栏的功能, 鼠标移动至列表框边界中间可触发

### 优化
1. 图片翻译:修复绘制、移动、删除、重新渲染文本框会出现的各种问题
2. 图片翻译:登录后自动打开图片翻译界面的开关, 移动到了图片翻译的高级设置里

## 4.5.4版本 更新时间:2023-07-03
### 新增
1. 图片翻译:高级设置新增可选`过滤拟声词`开关
2. 图片翻译:一键翻译新增可选,`跳过已翻译的`和 `全部重新翻译`
3. 图片翻译:新增可修改字体大小
4. 图片翻译:导出时支持导出工程文件压缩包
5. 图片翻译:编辑图时支持手动添加绘制文本块, 用于干预未识别到的文字区域
6. 图片翻译:设置-功能设定-其他一栏新增, 可选登录后自动打开图片翻译界面
7. chatgpt新增可自定义请求的api地址和所使用的模型
8. 私人翻译源新增了阿里云翻译, 每月免费额度100万字符, 次月会重置

### 优化
1. 图片翻译:优化chatgpt会将翻译后的多句子合并在一个文本块的问题
2. 图片翻译:字体选择框支持可输入和可搜索
3. 图片翻译:修复重新翻译后，如果当前处于浏览编辑图状态，不会刷新大图信息的问题
4. 图片翻译:修复导入翻译大尺寸图片时会崩溃的问题
5. 图片翻译:修复导入翻译文件路径超长的图片时会崩溃的问题
6. 图片翻译:如果试用开关关闭, 则不再下方状态栏显示试用次数

## 4.5.1版本 更新时间:2023-06-15
### 新增
1. 全新上线图片翻译功能, 支持对外语图片进行识别、抠字、翻译后回填
2. 私人翻译新增团子翻译, 目前完全免费, 可以随便使用，但是还处于测试阶段，不保证稳定性;    

### 优化
1. 优化公共翻译失效问题、文字堆叠问题
2. 优化chatgpt翻译, 更新为0613模型

## 4.4.4版本 更新时间:2023-04-26
### 修复
1. 修复登录时获取不到字典导致软件直接闪退无法启动的问题
2. 修复部分用户域名无法解析造成的登录失败问题

## 4.4.2版本 更新时间:2023-03-27
### 新增
1. 私人翻译新增ChatGPT, 需要密钥+代理才可使用
2. 新增可手动修改原文并刷新翻译功能，位于翻译框的翻译键右侧新图标使用
3. 新增翻译框自动记录上一次退出的位置和大小
4. 在设置页面字体选择时下拉框可预览字体样式，并且修改字体大小和样式后退出设置会立即生效;
5. 软件启动时范围框也会一起和翻译框显示

### 优化
1. 修复自动翻译时前后截图相似度对比失效，该问题会导致不停刷新翻译从而出现'闪烁'现象
2. 修复公共有道翻译失效问题
3. 自动登录失败会返回登录界面而不是失败死循环
4. 一些提示窗口的文本优化
5. 一些已知问题的优化

## 4.4.0版本 更新时间:2023-01-02
### 修复
1. 修复百度ocr对于空结果的解析

## 4.3.9版本 更新时间:2022-12-11
### 新增
1. 在线OCR添加了试用功能
2. 新增自动朗读功能

### 优化
1. 自动清理7天以前的日志, 避免冗余日志缓存


## 4.3.7版本 更新时间:2022-11-28
### 修复
- 修复百度OCR测试按钮会导致程序崩溃问题

### 新增
- 恢复翻译界面的锁按钮


## 4.3.6版本 更新时间:2022-11-26
### 新增
1. 添加俄语识别和翻译
2. 新增多范围切换功能, 界面于翻译框工具栏处开启
   - 多范围有四个范围栏位, 支持快捷键操作
3. 新增查看翻译历史功能, 界面于翻译框工具栏处开启

### 优化
1. 修复登录后卡崩溃问题, 提高软件启动速度
2. 修复快捷键会失效问题, 保证快捷键稳定性
3. 修改了一些提示消息的说明描述文本

### 移除
1. 翻译框工具栏移除了复制按钮
2. 翻译框工具栏移除了锁按钮

## 4.3.5版本 更新时间:2022-10-30
### 修复
- 修复4.3.2版本部分用户出现启动时卡死和登录超时的问题

## 4.3.2版本 更新时间:2022-10-30
### 优化
- 删除了公共goole翻译, 添加公共bing翻译
- 截取范围功能现在支持多屏操作了

### 新增
- 软件启动时增加loading提示

### 修复
- 修复了公共翻译的各种问题, 优化其使用
- 修复设置页面侧边栏高度不齐
- 现在文字方向开关在所有ocr页签下都显示了


## 4.3.1版本 更新时间:2022-09-27
### 优化
- 调整了设置页面的UI布局

### 新增
- 本地OCR新增安装和卸载功能
- OCR和翻译新增相应的额度查询功能
- 公共翻译新增测试可用性功能
- 公共翻译新增安装Chrome浏览器功能
- 新增用户改善体验计划

## 4.2.7版本 更新时间:2022-07-11
### 修复
- 修复了4.2.6概率程序卡死问题         
- 全屏置顶加入开关, 放置于功能设定页面         
- 修复全屏置顶下, 翻译框和范围框会黑屏的问题         
- 修复全屏置顶下, 截图时程序会卡死问题   


## 4.2.6版本 更新时间:2022-07-10
### 修复
- 修复非简中系统提示需要重新安装字体的问题
- 修复屏蔽词功能不会替换译文的缺陷
- 修复测试在线&百度ocr时贴图错误问题
- 修改一些错误的文字描述

### 优化
- 在线&百度ocr抽风时加入自动重试

### 新增
- 翻译器支持在全屏游戏下使用了!

## 4.2.4版本 更新时间:2022-05-03
### 修复
- 修复公共翻译无法自动升级谷歌浏览器引擎文件问题

### 优化
- 优化了登录，注册，保存设置等基础功能的网络请求

## 4.2.2版本 更新时间:2022-04-16
### 优化
- 优化了在线ocr自动模式的网络供应商（提高使用速度）

!> 4.2.2之前版本的用户会出现无法使用除了自动模式以外其他节点的问题，解决方式就是更新到4.2.2，如果用户不更新，则只能使用自动模式的节点

## 4.2.1版本 更新时间:2022-03-25

### 修复
- 修复文字换行问题, 现在可以正常换行了
- 修复一些公共翻译问题

## 4.2.0版本 更新时间:2022-03-09

### 新增
- 新增贴字翻译功能，详见`设置`-`显示设定`-`贴字翻译`
- 新增隐藏/显示范围框的快捷键，详见`设置`-`显示设定`-`隐藏范围热键`
- 替换词功能同时替换原文和译文

### 修复
- 删除唯一程序锁
- 修复隐藏翻译时间后右下角不能拉大翻译框问题

### 优化
- 优化了软件内的一些文字提示
- 优化了一些使用体验细节

## 4.1.0版本 更新时间:2022-02-25

### 新增
- 在线ocr支持竖排文本的识别和翻译，详见`设置`-`功能设定`-`文字方向`
- 在线ocr添加了节点选择，可手动修改节点，以解决频繁出现未知错误的问题，详见`设置`-`ocr设定`-`在线ocr`-`右侧`
- 添加了自动登陆功能，每次启动翻译器不需要再点一次登陆，详见`设置`-`功能设定`-`自动登陆`
- 百度ocr支持了高精度接口，百度ocr官网费用为每1w字/280元，没有免费额度请忽略本功能，详见`设置`-`功能设定`-`百度ocr高精度`
- 新增了一个程序锁，现在不允许多开软件

### 优化
- 优化了公共翻译启动失败的问题，公共翻译现在支持自动适配浏览器版本并更新引擎文件
- 优化了语音播放失败问题，语音播放依赖公共翻译，现在公共翻译同样支持自动适配浏览器引擎文件


## 4.0版本 更新时间:2021-12-04
>三个月写的代码量相当于公司两年的代码量，我要吐了

### 新增
- 更新了全新的4.0版本，完全重构；
- 加入了修改密码绑定邮箱的逻辑；
- 加入了星河云在线OCR系统，弥补离线的不足；
- 所有OCR接口和私人翻译接口加入了测试按钮；
- 所有配置项都加入了说明解释；
- 加入了图像相似度和文字相似度的配置，可以调节频繁闪烁的翻译问题；

### 修复
- 修复了快捷键一段时间会失效的问题；

### 优化
- 优化了所有公共翻译的质量和速度，新加入了DeepL翻译源；
- 优化了本地ocr的启动方式在翻译器内置启动；
- 优化了翻译逻辑，解决卡死的问题；


## 3.6.2版本 更新时间:2021-08-19
>3.0时代最后一个版本，主要是提高本地ocr的使用体验...

### 新增
- 翻译器上各翻译API的注册按钮，由原来的弹出本地教程文档，改为弹出在线文档的网页；

### 修复
- 本地ocr修复了安装时会报 'No module named 'cv2' 的问题;
- 本地ocr修复了安装时会报 'No module named 'paddle.fluid.core_noavx' 的问题;
- 翻译器修复了，如果挂了代理可能会导致无法注册和登录的问题；
- 翻译器修复了，本地ocr在识别到个别异体繁体字可能导致出错的问题；

### 优化
- 大幅度加快了本地ocr的识别速度;
- 本地ocr的识别准确度略有提高;
- 本地ocr对环境的适配稳定性更好了；
- 取消本地ocr安装时会输出一堆红色ERROR的吓人信息；


## 3.6版本 更新时间:2021-07-04

>这是团子更新过最难最累的版本.... 总算是解决了百度ocr被限额的问题....
>不说了... 大家能使用开心就好... _(:з」∠)_

### 新增
1. 新增了本地ocr，可替代百度的在线ocr；
2. 登录时对密码做了不可见处理；
3. 增加了屏蔽词和替换词功能，可对翻译的结果进行自定义屏蔽和替换；
4. 偷偷修复了一些不为人知的bug ....

## 3.5版本 更新时间:2020-10-08
>时隔了五个月 ... 团子终于更新了_(:з」∠)_
>因为工作了，上班了，成社畜了... 所以平时几乎没有时间去修复翻译器的问题
>献祭了一整个国庆不出去玩，终于完成了新版本的更新！真的很累！！！
>这是一个搭载了账号系统和服务器的版本，有了服务器，后面可以做很多事情 ~

### 新增
1. 新增可视化范围框，可手动隐藏
2. 新增自动保存翻译结果   【结果固定保存至: xxx\DangoTranslate-Ver3.5\Ver3.5\config\翻译历史.txt】
3. 加入了登录界面，账户功能   【船新的账号系统，后面可以延伸很多东西】
4. 加了可以锁定翻译界面的功能，锁定后翻译界面不可被操作
5. 新增可以导入导出配置文件的功能 ，直接切换账号就可以导入该账号的全部配置   【可以借人家号来玩了】

### 修复
1. 修复快捷键会失效的问题   【我不确定会不会还有问题 ....】
2. 修复了在高比例屏幕下，文字会过长不会自动分段的问题
3. 修复了手动翻译偶尔会卡死的问题
4. 点击翻译键时，上次选择的范围不会高亮且不可选择

### 优化
1. 优化网页版百度翻译的速度，归功于github上的@zxjlm大大技术支持
2. 优化了翻译时偶尔会出现的长时间等待问题，现在最多等待5秒不出结果就放弃
3. 优化了自动模式下偶尔会出现某句不翻译的问题
4. 优化了自动模式下，如果是动态画面，文字会不停闪动的问题   【依旧可能会闪动只是没那么高频】
5. 现在每次调用范围键后会自动翻译，无需再按一次翻译键

## 3.4版本 更新时间:2020-05-29
>大家好，我是胖次团子，欢迎使用我的团子翻译器 ~ ヾ(◍°∇°◍)ﾉﾞ
>为了让大家更好地透莲华，团子加班加点做好了3.4版本，请一定要更新和使用喔~


### 新增
1. 点击翻译界面的最小化后，翻译器会隐藏至右下角系统托盘；
2. 加入了程序启动音（Dango~）；

### 优化
1. 大大优化了翻译速度，多开翻译源时采用并行翻译。
    说明:假如你同时开了腾讯0.7s+百度1.1s+彩云0.8s，老版本需要2.6秒才会出翻译，新版本会在0.7秒先打印出腾讯翻译，1.1秒打印完全部翻译。
    3.4版本可同时打开所有翻译源，整体翻译时间约2s左右。
2. 翻译的时候，会根据文字内容，自动调整翻译框的大小，总之每次都会完整得显示完所有翻译的结果
3.  点击保存设置后，提示成功的弹窗现在优先级会高于翻译框，解决了之前被挡住点不到的问题；
4.  高精度和竖排模式用光额度后现在会给出准确的提示；
5.  修复了某些高缩放比例的屏幕下会导致点击不到设置页面的保存按键的问题；
6.  更换背景图片现在会自动根据翻译界面的尺寸自动缩放和适配；

### 修复
1. 修复了3.3版本翻译有时候会消失的问题；
2. 修复了频繁弹出ocr代理错误的问题；
3. 修复了点击充电按钮时，会自动关闭翻译界面的bug





## 3.3版本 更新时间:2020-05-07
>因为3.2版本发布后语音朗读功能和代理问题出现了bug，所以又紧急修复了这些地方，发布了3.3版本
>团子的不细心在这里和大家抱歉~

### 新增
1. 新增了屏蔽词汇的功能，现在可以屏蔽识别到的一些奇怪的符号和不想看到的词汇~
   具体怎么操作屏蔽功能，请看教程文档里的第17条~
2. 新增了一个查询查错用的exe，你们平时用不到啦，只是遇到bug的时候，方便打印出错误给我检查修复而已~

### 优化
1. 现在打开设置页面时，翻译界面不会消失了，可以同屏显示，更方便大家调试设置~

### 修复
1. 修复了语音朗读只能在每次打开翻译器的时候读一次的问题；
2. 修复了翻译器在日区等非简中环境下会错误报出代理异常的问题（其实是因为不是纯英文路径）；
3. 修复了当OCR出现问题时，翻译器不能正常打印错误情况在显示界面的问题；





## 3.2版本 更新时间:2020-05-04
>大家好，我是胖次团子，欢迎使用我的团子翻译器 ~ ヾ(◍°∇°◍)ﾉﾞ
>经过长时间争当熬夜冠军，3.2版本终于做好了！

### 新增
1. 加入了【四个新翻译接口】:
   （1）谷歌翻译（网页版）  （2）腾讯翻译（网页版）  （3）Bing翻译（网页版）   （4）彩云翻译（私人版）
2. 新加入了对【竖排文本的翻译模式】，额度为每天500次。可以啃生肉本啦 ~
3.  新加入了【高精度翻译模式】，额度为每天500次。如果觉得识别效果不好，可以开启此功能，准确度极高~
4.  新加入了【语音播放功能】，可以朗读识别到的原文文本。如果看不懂翻译，那就听！什么？听不懂，滚去学日语！
5.  新加入了【截图键的快捷键】，可以用快捷键截图了
6. 【此条删除】翻译过的文本会自动保留在翻译框，可以查看刚刚翻译过的文本，最大是保存10次翻译结果
7. 【此条删除】翻译器在每次退出后会自动记录退出时的大小和位置，下次打开时按照上次状态
8.  添加屏蔽词功能，自定义屏蔽的某些字词，可以在翻译的时候过滤掉

### 优化
1. 采用散装文件方式，翻译器启动速度现在变得非常快了！
2. 优化了界面的美观，越来越好看了，嗯嗯，团子指自己~
3.  快捷键功能终极优化，支持几乎电脑所有的单键按钮作为快捷键，使用快捷键翻译体验极好，团子吹爆！
4.  现在支持日区电脑系统，以后再问我为什么日区系统打不开翻译器我就敲死你！
5.  修复了电脑缩放比例在125%时，打开翻译器会出现界面显示不正常的问题。
6.  现在字体颜色，可以选择是使用纯色实心字体，还是使用白底带颜色描边的字体了。
7. 【此条删除】翻译文本和原文文本的字体样式被分开了，可以给原文设定和译文不一样的字体样式。
8.  文字的大小设定幅度上调到了30号字，不要再和我吐槽字好小哦！
9.  自动翻译的时间间隔改为了0.1秒一个档次，最高是15秒

### 修复
1. 修复了右上角点叉叉会导致程序整个退出和崩溃的问题；
2. 修复了yeekit不能翻译英文的问题；
3. 修复了不能翻译韩文的问题；
4. 修复了经常性打不开翻译器，需要重新解压安装的问题；
5. 修复了百度ocr频繁弹出代理设置问题（大概，不保证100%不弹）；
6. 将弹窗提示改为显示在翻译界面，尽可能减少弹窗的污染。






## 3.1版本 更新时间:2020-03-22
### 新增
1. 新加入了三个公共翻译接口，yeekit、ALAPI、百度翻译网页版；
2. 新加入了韩语翻译；
3.  新加入单次复制识别到的文字到剪贴板的按钮（在主界面）；

### 优化
1. 自动翻译现在优化到了最快1秒翻译一次，具体还看自身网速决定；
2. 快捷键新增了ctrl和shift键作为键1配合使用；
3.  自动翻译现在搬到了主界面上，可以更方便地切换翻译模式；
4.  翻译的字体加了一圈荧光轮廓，使得文字效果更加清晰了；
5.  软件的鼠标样式改成了一串团子；
6.  现在翻译框可以随意调节任何方向的大小；
7.  现在软件会自动适配电脑屏幕缩放比例，不需要再手动填写设置；
8.  翻译界面的工具栏改为了自动隐藏；
9.  部分地方都改为了全新的样式，使得翻译器更有逼格了；

### 修复
1. 修复了各翻译频繁抽风弹窗的问题；
2. 修复了腾讯翻译在出错时不会弹出报错提示的问题；
3.  修复了在切换背景时主界面会出现白边的问题；
4.  修复了拖动翻译框会出现卡死的问题，现在翻译框的拖动更加随心所欲了；





## 3.0版本 更新时间:2020-02-25

>这次更新真的做了很久很辛苦，还希望大家喜欢的话给我充电支持一下，拜托了，爱你们 ~ (❁´◡`❁)*✲ﾟ*

1. 一个全新的框架和界面，彻底改变了以前的布局和格式；
2. 现在翻译框可以调节透明度，可以变成透明的翻译框了；
3.  取消了以坐标方式设置识别范围，现在可以直接鼠标拖出要翻译的范围；
4.  优化了有道翻译的翻译质量；
5.  新加入了彩云小泽翻译，不过用的是公交接口，容易抽风，慎用；
6.  新加入了金山词霸翻译，用的是公共接口，偶尔会抽风；
7.  现在每一种翻译都可以设置其字体样式、字体颜色、字体大小；
8.  现在可以选择是否在翻译框显示原文了；
9.  现在可以开启，自动将识别的原文复制到剪贴板上，方便大家粘贴使用；
10.  现在可以用快捷键了，不过因为用的是全局快捷键，会和自身电脑很多全局热键冲突，所以目前只支持的范围很小；
11.  现在可以自动以设置页面的背景了，背景分辨率以407 x 475时效果最佳；
12.  加入了打赏界面 (〃'▽'〃)








## 2.1版本 更新时间:2020-02-10

1. 彻底解决了自动翻译和手动翻译的卡顿问题，现在自动模式下可以随意拖动和操作；

2. 自动模式的刷新频率最低为2s，之前是3s，个人实测翻译2s下的实际速度为1.8秒左右，视个人网速可能有变化；

3.  现在可以翻译英文了；

4.  优化了翻译时的逻辑，现在会通过判断你的文本框图片是否产生变化来决定是否调用OCR并翻译，解决了画面无变化时候产生的重复调用，浪费额度问题；

5.  加入了所有窗口初始位置都是屏幕居中的设定，以前是窗口位置随意变化；

6.  优化了个别大小的字体，在翻译时最右边的字会被部分遮挡的问题；

7.  优化了个别时候翻译的文本会自动换行的问题；





## 2.0版本 更新时间:2020-02-06

1. 翻译主界面加长了一些，现在能显示更多的文字

2. 优化了自动翻译的逻辑，现在自动模式下，如果文字画面无变化，不会再重复调用翻译，避免了自动下挂机，或长时间未点击文字画面造成不必要的重复调用字符浪费

3.  翻译源由单选更改为可以多选了，有道、百度和腾讯可以同时翻译，方便对照理解

4.  百度翻译和腾讯翻译的API设置页面加入了一些额度的说明，以及加入了直接获取注册方法、查询额度的功能

5.  自动翻译时的频率由最小2s更改为3s，个人测试3s时的刷新时间为3-4s，根据个人电脑和网络不同可能略有差异

6.  加入了翻译文本的颜色自定义功能，可以自定义每种翻译和原文的显示颜色，方便同时翻译时直观区分

7.  加入了翻译框大小可以调节的功能

8.  加入了自定义翻译的字体样式，以及字体大小的功能，字体样式的种类取决于每个人电脑已安装的字体，需有喜欢的字体，可以另外在自己电脑安装后，便会显示在翻译器的字体样式里

9.  修改了范围设置页面，添加了4个坐标保存页面，方便玩不同游戏时只用第一次获取一次，之后可以直接切换，每个坐标都可以填入游戏名方便记录该坐标对应的游戏

10.  优化了自动模式的弹窗逻辑，现在不是真正意义上的错误是不会弹窗了